--- a/package.json
+++ b/package.json
@@ -44,15 +44,16 @@
   "sideEffects": false,
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "~10.1.0",
     "@babel/core": "~7.3.4",
     "@babel/plugin-transform-object-assign": "~7.2.0",
     "@babel/plugin-transform-runtime": "~7.3.4",
     "@babel/polyfill": "~7.2.5",
     "@babel/preset-env": "~7.3.4",
+    "@types/node": "~14.14.14",
+    "autoprefixer": "~10.1.0",
     "babel-plugin-array-includes": "~2.0.3",
     "eslint": "~5.15.0",
-    "gatsby": "~2.1.18",
+    "gatsby": "~2.29.1",
     "husky": "~1.3.1",
     "lint-staged": "~8.1.5",
     "np": "~4.0.2",
@@ -65,13 +66,12 @@
     "rollup-plugin-commonjs": "~9.2.1",
     "rollup-plugin-node-resolve": "~4.0.1",
     "rollup-plugin-postcss": "~2.0.3",
-    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-sass": "~1.2.2",
     "rollup-plugin-terser": "~4.0.4",
     "rollup-plugin-typescript2": "~0.29.0",
     "sass": "~1.30.0",
     "tslib": "~2.0.3",
-    "typescript": "~4.1.3",
-    "@types/node": "~14.14.14"
+    "typescript": "~4.1.3"
   },
   "husky": {
     "hooks": {
