--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "focus-overlay",
-  "version": "1.0.5",
+  "name": "@yoo-digital/focus-overlay",
+  "version": "1.0.0",
   "description": "Library for creating overlays on focused elements.",
   "license": "MIT",
   "engines": {
@@ -8,13 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mmahandev/FocusOverlay.git"
+    "url": "git+https://github.com/yoo-digital/FocusOverlay.git"
   },
   "bugs": {
-    "url": "https://github.com/mmahandev/FocusOverlay/issues"
+    "url": "https://github.com/yoo-digital/FocusOverlay/issues"
   },
-  "homepage": "https://github.com/mmahandev/FocusOverlay",
-  "author": "mmahandev",
+  "homepage": "https://github.com/yoo-digital/FocusOverlay",
+  "author": "YOO AG",
   "main": "dist/focusoverlay.cjs.js",
   "module": "dist/focusoverlay.esm.js",
   "unpkg": "dist/focusoverlay.js",
@@ -44,34 +44,34 @@
   "sideEffects": false,
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "~7.3.4",
-    "@babel/plugin-transform-object-assign": "~7.2.0",
-    "@babel/plugin-transform-runtime": "~7.3.4",
-    "@babel/polyfill": "~7.2.5",
-    "@babel/preset-env": "~7.3.4",
-    "@types/node": "~14.14.14",
-    "autoprefixer": "~10.1.0",
-    "babel-plugin-array-includes": "~2.0.3",
-    "eslint": "~5.15.0",
-    "gatsby": "~2.29.1",
-    "husky": "~1.3.1",
-    "lint-staged": "~8.1.5",
-    "np": "~4.0.2",
-    "postcss": "~8.2.1",
-    "prettier-eslint": "~8.8.2",
-    "prettier-eslint-cli": "~4.7.1",
-    "rimraf": "~2.6.3",
-    "rollup": "~1.3.0",
-    "rollup-plugin-babel": "~4.3.2",
-    "rollup-plugin-commonjs": "~9.2.1",
-    "rollup-plugin-node-resolve": "~4.0.1",
-    "rollup-plugin-postcss": "~2.0.3",
-    "rollup-plugin-sass": "~1.2.2",
-    "rollup-plugin-terser": "~4.0.4",
-    "rollup-plugin-typescript2": "~0.29.0",
-    "sass": "~1.30.0",
-    "tslib": "~2.0.3",
-    "typescript": "~4.1.3"
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
+    "@types/node": "^14.14.14",
+    "autoprefixer": "^10.1.0",
+    "babel-plugin-array-includes": "^2.0.3",
+    "eslint": "^5.15.0",
+    "gatsby": "^2.29.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "np": "^4.0.2",
+    "postcss": "^8.2.1",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.3.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "sass": "^1.30.0",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
