--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.29.0",
     "sass": "^1.30.0",
