--- a/package.json
+++ b/package.json
@@ -50,9 +50,17 @@
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
     "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "@yoo-digital/eslint-config-react": "^0.4.0",
+    "@yoo-digital/stylelint-config-sass": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "babel-plugin-array-includes": "^2.0.3",
-    "eslint": "^5.15.0",
+    "eslint": "^7.16.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby": "^2.29.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
@@ -70,8 +78,10 @@
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.29.0",
     "sass": "^1.30.0",
+    "stylelint": "^13.8.0",
+    "stylelint-scss": "^3.18.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
