include types in export

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "module": "dist/focusoverlay.esm.js",
   "unpkg": "dist/focusoverlay.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf dist && npm run build:es && npm run build:types",
+    "build:es": "rollup -c rollup.config.js",
+    "build:types": "tsc -p ./tsconfig.types.json --emitDeclarationOnly --outDir dist/types",
     "watch": "rollup -c -w",
     "lint": "eslint src/**/*.js",
     "lint:fix": "prettier-eslint src/**/*.js --write",
@@ -76,7 +78,7 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.29.0",
+    "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.30.0",
     "stylelint": "^13.8.0",
     "stylelint-scss": "^3.18.0",
