--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "build": "rimraf dist && npm run build:es && npm run build:types",
     "build:es": "rollup -c rollup.config.js",
     "build:types": "tsc -p ./tsconfig.types.json --emitDeclarationOnly --outDir dist/types",
+    "lint": "npm run lint:ts && npm run lint:sass",
+    "lint:sass": "stylelint \"src/**/*.scss\" ",
+    "lint:ts": "eslint -c .eslintrc.js --ext .ts,.tsx --ignore-pattern **/*.d.ts ./src",
+    "lint:ts:quiet": "eslint -c .eslintrc.js --ext .ts,.tsx --ignore-pattern **/*.d.ts ./src --quiet",
     "watch": "rollup -c -w",
-    "lint": "eslint src/**/*.js",
-    "lint:fix": "prettier-eslint src/**/*.js --write",
+    "prepare": "npm run build",
     "prebuild": "rimraf dist",
-    "prepublishOnly": "npm run build && git add * && git commit -m \"Updating build\"",
+    "prepublishOnly": "npm run lint && npm run build",
     "release": "np patch --any-branch"
   },
   "files": [
@@ -54,15 +57,12 @@
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
-    "@yoo-digital/eslint-config-react": "^0.4.0",
+    "@yoo-digital/eslint-config-base": "^0.4.0",
     "@yoo-digital/stylelint-config-sass": "^0.3.1",
     "autoprefixer": "^10.1.0",
     "babel-plugin-array-includes": "^2.0.3",
     "eslint": "^7.16.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "gatsby": "^2.29.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
