--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "YOO AG",
   "main": "dist/focusoverlay.cjs.js",
   "module": "dist/focusoverlay.esm.js",
-  "unpkg": "dist/focusoverlay.js",
   "scripts": {
     "build": "rimraf dist && npm run build:es && npm run build:types",
     "build:es": "rollup -c rollup.config.js",
@@ -59,15 +58,13 @@
     "@typescript-eslint/parser": "^4.11.0",
     "@yoo-digital/eslint-config-base": "^0.4.0",
     "@yoo-digital/stylelint-config-sass": "^0.3.1",
-    "autoprefixer": "^10.1.0",
     "babel-plugin-array-includes": "^2.0.3",
     "eslint": "^7.16.0",
     "eslint-plugin-import": "^2.22.1",
     "gatsby": "^2.29.1",
     "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
     "np": "^4.0.2",
-    "postcss": "^8.2.1",
+    "node-sass-package-importer": "^5.3.2",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
     "rimraf": "^2.6.3",
@@ -76,7 +73,6 @@
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-scss": "^2.6.1",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.30.0",
@@ -87,13 +83,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint"
     }
-  },
-  "lint-staged": {
-    "src/**/*.js": [
-      "npm run lint:fix",
-      "git add"
-    ]
   }
 }
