--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yoo-digital/focus-overlay",
-  "version": "1.0.2-canary.4",
+  "version": "1.0.2",
   "description": "Library for creating overlays on focused elements.",
   "license": "MIT",
   "engines": {
